ingressv1/ingressv1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressv1
  namespace: projectcontour-roots
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: rootapp
            port:
              number: 80
